--- a/baby.css
+++ b/baby.css
@@ -29,111 +29,116 @@ a {
     position: fixed;
     width: 100%;
     z-index: 10;
-  }
-  
-  .cabecalhoUm {
+}
+
+.cabecalhoUm {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 80px;
     padding: 5px;
-  }
-  
-  .procurando {
+}
+
+.procurando {
     padding: 13px;
     border-radius: 30px;
     width: 400px;
     height: 35px;
     font: 600 16px 'WorkSans', sans-serif;
-  
-  }
-  
-  .imagemLogo img {
+
+}
+
+.imagemLogo img {
     width: 150px;
-  }
-  
-  .linha {
+}
+
+.linha {
     background-color: #fff;
     height: 0.4px;
-  }
-  
-  .cabecalho2 {
+}
+
+.cabecalho2 {
     text-align: center;
     padding: 15px 0 0px 0;
-  }
-  
-  .item {
+}
+
+.item {
     color: #fff;
     margin: 20px;
     font: 600 16px 'WorkSans', sans-serif;
-  }
-  
-  .cabecalho2 {
+}
+
+.cabecalho2 {
     display: flex;
     justify-content: center;
-  }
-  
-  .menu-item {
+}
+
+.menu-item {
     position: relative;
     padding-bottom: 10px;
-  }
-  
-  .submenu {
+}
+
+.submenu {
     display: none;
     position: absolute;
-    top: 100%; /* Posiciona logo abaixo do item do menu */
-    left: 50%; /* Centraliza horizontalmente em relação ao item do menu */
-    transform: translateX(-50%); /* Ajusta a posição para centralizar */
-    width: 50vw; /* Largura fixa para o submenu */
+    top: 100%;
+    /* Posiciona logo abaixo do item do menu */
+    left: 50%;
+    /* Centraliza horizontalmente em relação ao item do menu */
+    transform: translateX(-50%);
+    /* Ajusta a posição para centralizar */
+    width: 50vw;
+    /* Largura fixa para o submenu */
     background-color: #fff;
     border: 1px solid #2F2F2F;
     padding: 10px;
     z-index: 1;
     border-radius: 20px;
-    box-sizing: border-box; /* Garante que o padding seja incluído na largura total */
-  }
-  
-  .submenuOrganizacao {
+    box-sizing: border-box;
+    /* Garante que o padding seja incluído na largura total */
+}
+
+.submenuOrganizacao {
     margin: 10px 80px;
     text-align: left;
-  }
-  
-  .submenu p {
+}
+
+.submenu p {
     font: 600 16px 'WorkSans', sans-serif;
-  
-  }
-  
-  .submenu a {
+
+}
+
+.submenu a {
     display: block;
     padding: 5px;
     text-decoration: none;
     font: 400 16px 'WorkSans', sans-serif;
     color: #000;
-  }
-  
-  .submenuItem {
+}
+
+.submenuItem {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 20px;
-  
-  }
-  
-  .menu-item:hover .submenu {
+
+}
+
+.menu-item:hover .submenu {
     display: block;
     text-align: center;
-  }
-  
-  .item {
+}
+
+.item {
     padding: 10px 10px 8px 10px;
-  }
-  
-  .item:hover {
+}
+
+.item:hover {
     border-bottom: 1px solid #fff;
-  }
-  
-  
-  /* FIM DO CABEÇALHO */
+}
+
+
+/* FIM DO CABEÇALHO */
 
 
 
@@ -583,7 +588,7 @@ a {
 .Quadrado-da-meia-malha-kit img,
 .Quadrado-da-meia-sap-kit img,
 .Quadrado-da-meia-kitLhama img,
-.Quadrado-da-meia-kitChevron img{
+.Quadrado-da-meia-kitChevron img {
     width: 320px;
     height: 150px;
     margin: 45px;
@@ -592,7 +597,7 @@ a {
 .Quadrado-da-meia-kitcolors1 img,
 .Quadrado-da-meia-kitcolors2 img,
 .Quadrado-da-meia-colorsFem1-kit img,
-.Quadrado-da-meia-colorsFem-kit img, 
+.Quadrado-da-meia-colorsFem-kit img,
 .Quadrado-da-meia-malha-kitFem img,
 .Quadrado-da-meia-sap-kitFem img {
     width: 320px;
