--- a/descricaoMasculina/style-masc.css
+++ b/descricaoMasculina/style-masc.css
@@ -430,15 +430,8 @@ button{
     font-size: 2.55vh;
     margin-top: 3vh;
     margin-bottom: 20px;
+    cursor: pointer;
 }
-
-
-
-
-
-
-
-
 
 
 /* RODAPE */
