--- a/revendedor.css
+++ b/revendedor.css
@@ -235,6 +235,10 @@ a {
   font-family: 'LibreFranklin';
 }
 
+#info-box-1 {
+  height: 150px;
+}
+
 /* Estilo adicional para o fundo quando a caixa de texto estiver ativa */
 .info-box.active {
   display: block;
@@ -286,7 +290,7 @@ a {
 
 
 .forms img {
-  width: 700px;
+  width: 800px;
   height: 800px;
   margin-top: 100px;
 }
@@ -308,14 +312,14 @@ a {
   font-size: 6vh;
   font-family: 'LibreFranklin';
   color: #fff;
-  margin-left: 100px;
+  margin-left: 150px;
   margin-top: 5px;
 }
 
 .circulo-topicos1 h2,
 .circulo-topicos2 h2,
 .circulo-topicos3 h2 {
-  margin-left: 150px;
+  margin-left: 200px;
   margin-top: -35px;
   font-weight: 400;
   color: #fff;
@@ -327,7 +331,7 @@ a {
 .topicos3 {
   color: #fff;
   font-family: 'LibreFranklin';
-  margin-left: 100px;
+  margin-left: 200px;
   margin-top: 30px;
   word-wrap: break-word;
 
@@ -344,14 +348,16 @@ a {
 
 
 .forms-aqui {
-
+  background-color: #fff;
   color: #fff;
   border-radius: 10px;
   margin-top: -1000px;
   padding: 20px;
-  margin-top: -500px;
-  margin-left: 600px;
+  margin-top: -600px;
+  margin-left: 700px;
   width: 600px;
+  z-index: 1;
+  position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 }
@@ -359,8 +365,231 @@ a {
 
 
 
+/* RESET */
+* {
+  box-sizing: border-box;
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* FONTES */
+
+@font-face {
+  font-family: 'LibreFranklin';
+  src: url(fonts/LibreFranklin-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: 'WorkSans';
+  src: url(fonts/WorkSans-VariableFont_wght.ttf);
+}
+
+/* RODAPÉ */
+
+#footer {
+  background-color: #252160;
+  color: white;
+  margin-top: 120px;
+  transition: background-color 0.5s ease;
+}
+
+#footer:hover {
+  background-color: #1e1b55;
+}
+
+.container-rodape {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 65px 100px 25px 100px;
+  transition: padding 0.5s ease;
+}
+
+.imgLogo-rodape {
+  width: 200px;
+}
+
+.linha1-rodape {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contatos-rodape,
+.acompanhe-rodape {
+  margin-top: 20px;
+  transition: margin-top 0.5s ease;
+}
+
+.whats-rodape,
+.email-rodape {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.whats-rodape a,
+.email-rodape a {
+  display: inline-flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.imgContatos-rodape {
+  width: 30px;
+  margin-right: 10px;
+  transition: transform 0.3s ease;
+}
+
+.imgContatos-rodape:hover {
+  transform: translateY(-5px);
+}
+
+.titulo-rodape {
+  font: 650 20px 'LibreFranklin', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: color 0.3s ease;
+}
+
+.titulo-rodape:hover {
+  color: #b4b4b4;
+}
+
+.texto-rodape {
+  font: 400 18px 'WorkSans', sans-serif;
+}
+
+.texto2-rodape {
+  font: 400 18px 'WorkSans', sans-serif;
+  margin-top: 12px;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.texto2-rodape:hover {
+  color: #b4b4b4;
+  transform: scale(0.97);
+}
+
+.imgRedes-rodape {
+  width: 30px;
+  margin: 0 6px;
+  transition: transform 0.3s ease;
+}
+
+.imgRedes-rodape:hover {
+  transform: translateY(-5px);
+}
+
+.redes-rodape {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.linha2-rodape {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.categGeral-rodape {
+  display: flex;
+}
+
+.subCategoria1-rodape {
+  margin-right: 90px;
+}
+
+.textoInst-rodape {
+  margin-top: 20px;
+}
+
+.categGeral-rodape {
+  margin-top: 10px;
+}
+
+.categorias-rodape {
+  margin-left: 213px;
+}
+
+.final-rodape {
+  margin-top: 110px;
+  text-align: center;
+}
+
+.textoFinal-rodape {
+  font: 400 15px 'WorkSans', sans-serif;
+}
 
 
+
+@media screen and (max-width: 500px) {
+  .container-rodape {
+    padding: 50px 50px;
+  }
+
+  .linha1-rodape,
+  .linha2-rodape {
+    display: block;
+    text-align: center;
+  }
+
+  .contatos-rodape {
+    margin-top: 40px;
+  }
+
+  .titulo-rodape {
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .acompanhe-rodape,
+  .institucional-rodape,
+  .categorias-rodape {
+    margin-top: 60px;
+  }
+
+  .categorias-rodape {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .final-rodape {
+    margin-top: 60px;
+  }
+
+  .imgLogo-rodape {
+    width: 150px;
+  }
+
+  .imgRedes-rodape {
+    margin: 10px;
+  }
+
+  .subCategoria1-rodape {
+    margin-right: 50px;
+  }
+
+  .categGeral-rodape {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .whats-rodape,
+  .email-rodape {
+    justify-content: center;
+    /* Centraliza o conteúdo */
+  }
+}
 
 
 
@@ -385,9 +614,12 @@ a {
   }
 
   .seja-revendedor-img {
-    width: 90%;
-    max-width: 400px;
-    margin: 0;
+    text-align: center;
+    justify-content: center;
+    margin-left: 0;
+    margin-top: 100px;
+    width: 200px;
+    height: 200px;
   }
 
   .revendedor {
@@ -395,7 +627,7 @@ a {
   }
 
   .revendedor h1 {
-    font-size: 36px;
+    font-size: 28px;
     margin: 0;
     text-align: center;
   }
@@ -405,7 +637,7 @@ a {
   }
 
   .btn-cadastro {
-    margin-left: 60px;
+    margin-left: 40px;
     margin-top: 20px;
     padding: 10px 20px;
 
@@ -417,6 +649,8 @@ a {
     font-size: 24px;
   }
 
+
+
   .vantagens {
     flex-direction: column;
     align-items: center;
@@ -425,7 +659,7 @@ a {
   .maior-rentabilidade,
   .variedade,
   .menor-custo {
-    width: 80%;
+    width: 60%;
     height: auto;
     margin: 20px 0;
   }
@@ -433,7 +667,6 @@ a {
   .info-box {
     display: none;
     /* Ocultar inicialmente */
-
 
     position: fixed;
     top: 50%;
@@ -453,7 +686,13 @@ a {
     font-size: 15px;
   }
 
+  .variedade-img {
+    width: 70px;
+    height: 60px;
+  }
+
   /* FORMS */
+
   .forms img {
     width: 100%;
     height: auto;
@@ -461,25 +700,52 @@ a {
   }
 
   .forms-h2 {
+    color: #fff;
     font-size: 3vh;
-    margin-top: 0;
-    margin-left: 20px;
+    margin-top: -55vh;
+    margin-left: 10px;
+  }
+
+  .circulo-topicos1 h2,
+  .circulo-topicos2 h2,
+  .circulo-topicos3 h2 {
+    margin-left: 50px;
+    margin-top: -25px;
+    font-weight: 400;
+    color: #fff;
+    font-family: 'LibreFranklin';
+    font-size: 3vh;
   }
 
   .titulo-topicos {
-    font-size: 5vh;
+    font-size: 4vh;
     margin-left: 20px;
+    margin-top: -28px;
   }
+
 
   .topicos1,
   .topicos2,
   .topicos3 {
-    margin-left: 20px;
+    margin-left: 0px;
+    font-size: 0vh;
+
   }
 
   .forms-aqui {
     width: 90%;
     margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
   }
+
+  .iframe-forms {
+    width: 100%;
+    height: 400px;
+  }
+
+
+
+
+
+
 }
