--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ span {
   margin-top: 2vh;
 }
 
-.MeiaBabySubtitulo{
+.MeiaBabySubtitulo {
   font-family: 'WorkSans';
   font-weight: 600;
   font-size: 2.55vh;
@@ -605,14 +605,14 @@ span {
   border-bottom: #A75D44 solid 4px;
   padding-right: 40px;
 }
-
-/* #tendencias #divMeiasBaby {
+ 
+#div-meia {
   align-items: center;
   width: 320px;
-  margin: 10vh 10px;
+  margin-top: 10vh;
   border: 1px solid #A5A5A5;
   border-radius: 20px;
-} */
+}
 
 #tendencias .meiasMaisVedidas {
   position: relative;
@@ -634,12 +634,149 @@ span {
   width: calc((320px + 20px) * 9);/* Número de produtos * largura */
 }
 
-#tendencias .Quadrado-da-meia-Color-Baby, 
+.informacoes-meia {
+  margin: 2vh 2vh 0 2vh;
+}
+
+.Subtitulo {
+  font-family: 'WorkSans';
+  font-weight: 600;
+  font-size: 2.55vh;
+  margin-top: 0.75vh;
+}
+
+.container2 {
+  display: flex;
+  justify-content: center;
+}
+
+.Quadrado-da-meia-vaquinha-cano-longo,
+.Quadrado-da-meia-esportiva-lisa,
+.Quadrado-da-meia-malhaFem,
+.Quadrado-da-meia-chevron,
+.Quadrado-da-meia-rendada,
+.Quadrado-da-meia-esportiva-aero,
+.Quadrado-da-meia-faixa-amarela,
 #tendencias .Quadrado-da-Meia-Desenhada-Baby-um, 
 #tendencias .Quadrado-da-Meia-Desenhada-Baby {
   width: 320px;
   flex-shrink: 0;
   margin: 0 10px;
+}
+
+.Quadrado-da-meia-vaquinha-cano-longo img,
+.Quadrado-da-meia-esportiva-lisa img,
+.Quadrado-da-meia-malhaFem img,
+.Quadrado-da-meia-chevron img,
+.Quadrado-da-meia-rendada img,
+.Quadrado-da-meia-esportiva-aero img,
+.Quadrado-da-meia-faixa-amarela img {
+  width: 220px;
+  height: 200px;
+}
+
+.vaquinha img,
+.brancaLisa,
+.pretaLisa,
+.cinzaLisa,
+.verdeMFem,
+.rosaMFem,
+.amareloMFem,
+.lilasMFem,
+.brancaMFem,
+.amareloMFem,
+.rosaCh,
+.verdeCh,
+.dourada,
+.rosa,
+.brancaAero,
+.pretaAero,
+.cinzaAero,
+.amarelaPro {
+  width: 5vh;
+  height: 5vh;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.cor-da-meia-vaquinha,
+.cores-branca-preta-cinza,
+.cores-verde-amarela-malha,
+.cores-chevron,
+.cores-rendada,
+.cores-branca-preta-cinza05,
+.cores-amarela-pro {
+  display: flex;
+  gap: 1vh;
+  margin-top: 0.75vh;
+  cursor: pointer;
+}
+
+.brancaLisa,
+.brancaMFem,
+.brancaAero {
+  background-color: #ffffff;
+  border: 1px solid #76767688;
+}
+
+.pretaLisa,
+.pretaAero {
+  background-color: #000000;
+}
+
+.cinzaLisa,
+.cinzaAero {
+  background-color: #96A6B5;
+}
+
+.rosaMFem {
+  background-color: #E86AAD;
+}
+
+.lilasMFem {
+  background-color: #919AD3;
+}
+
+.amareloMFem {
+  background-color: #F2F2C4;
+}
+
+.verdeMFem {
+  background-color: #69DABB;
+}
+
+.rosaCh {
+  background-color: #DF2D8B;
+}
+
+.verdeCh {
+  background-color: #0D9D9D;
+}
+
+.dourada {
+  background-color: #F4F1D1;
+}
+
+.rosa {
+  background-color: #E86AAD;
+}
+
+.amarelaPro {
+  background-color: #D4BE1B;
+}
+
+.selected {
+  border: 2px solid #000000;
+  width: 5vh;
+  height: 5vh;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.selected img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #tendencias .tracinhos {
