--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -29,111 +29,116 @@ a {
     position: fixed;
     width: 100%;
     z-index: 10;
-  }
-  
-  .cabecalhoUm {
+}
+
+.cabecalhoUm {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 80px;
     padding: 5px;
-  }
-  
-  .procurando {
+}
+
+.procurando {
     padding: 13px;
     border-radius: 30px;
     width: 400px;
     height: 35px;
     font: 600 16px 'WorkSans', sans-serif;
-  
-  }
-  
-  .imagemLogo img {
+
+}
+
+.imagemLogo img {
     width: 150px;
-  }
-  
-  .linha {
+}
+
+.linha {
     background-color: #fff;
     height: 0.4px;
-  }
-  
-  .cabecalho2 {
+}
+
+.cabecalho2 {
     text-align: center;
     padding: 15px 0 0px 0;
-  }
-  
-  .item {
+}
+
+.item {
     color: #fff;
     margin: 20px;
     font: 600 16px 'WorkSans', sans-serif;
-  }
-  
-  .cabecalho2 {
+}
+
+.cabecalho2 {
     display: flex;
     justify-content: center;
-  }
-  
-  .menu-item {
+}
+
+.menu-item {
     position: relative;
     padding-bottom: 10px;
-  }
-  
-  .submenu {
+}
+
+.submenu {
     display: none;
     position: absolute;
-    top: 100%; /* Posiciona logo abaixo do item do menu */
-    left: 50%; /* Centraliza horizontalmente em relação ao item do menu */
-    transform: translateX(-50%); /* Ajusta a posição para centralizar */
-    width: 50vw; /* Largura fixa para o submenu */
+    top: 100%;
+    /* Posiciona logo abaixo do item do menu */
+    left: 50%;
+    /* Centraliza horizontalmente em relação ao item do menu */
+    transform: translateX(-50%);
+    /* Ajusta a posição para centralizar */
+    width: 50vw;
+    /* Largura fixa para o submenu */
     background-color: #fff;
     border: 1px solid #2F2F2F;
     padding: 10px;
     z-index: 1;
     border-radius: 20px;
-    box-sizing: border-box; /* Garante que o padding seja incluído na largura total */
-  }
-  
-  .submenuOrganizacao {
+    box-sizing: border-box;
+    /* Garante que o padding seja incluído na largura total */
+}
+
+.submenuOrganizacao {
     margin: 10px 80px;
     text-align: left;
-  }
-  
-  .submenu p {
+}
+
+.submenu p {
     font: 600 16px 'WorkSans', sans-serif;
-  
-  }
-  
-  .submenu a {
+
+}
+
+.submenu a {
     display: block;
     padding: 5px;
     text-decoration: none;
     font: 400 16px 'WorkSans', sans-serif;
     color: #000;
-  }
-  
-  .submenuItem {
+}
+
+.submenuItem {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 20px;
-  
-  }
-  
-  .menu-item:hover .submenu {
+
+}
+
+.menu-item:hover .submenu {
     display: block;
     text-align: center;
-  }
-  
-  .item {
+}
+
+.item {
     padding: 10px 10px 8px 10px;
-  }
-  
-  .item:hover {
+}
+
+.item:hover {
     border-bottom: 1px solid #fff;
-  }
-  
-  
-  /* FIM DO CABEÇALHO */
+}
+
+
+/* FIM DO CABEÇALHO */
 
 
 
@@ -197,7 +202,7 @@ a {
 .pretaCurto,
 .pretaCurtoKit,
 .cinzaLisa,
-.cinzaHorse, 
+.cinzaHorse,
 .cinzaS,
 .cinzaPolo,
 .cinzaAero,
@@ -255,8 +260,8 @@ a {
     background-color: #000000;
 }
 
-.cinzaLisa, 
-.cinzaHorse, 
+.cinzaLisa,
+.cinzaHorse,
 .cinzaS,
 .cinzaAero,
 .cinzaKit01,
@@ -299,7 +304,7 @@ a {
     font: 400 16px 'WorkSans', sans-serif;
 }
 
-.parte2{
+.parte2 {
     display: flex;
     justify-content: center;
     gap: 20vh;
@@ -396,11 +401,113 @@ a {
 
 
 .selected {
-    border: 2px solid #000000 ;
-    border-radius: 50%; 
+    border: 2px solid #000000;
+    border-radius: 50%;
 }
 
 
+/* -------------------------------------CANO CURTO MASCULINA--------------------------------------------------------------- */
+
+.Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
+.Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
+.Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
+.Quadrado-da-meia-CanoCurto-Branca img,
+
+
+.Quadrado-da-meia-Kit-BrancoAzulEScuro-Chumbo-BrancoCInza img,
+.Quadrado-da-meia-Kit-Cinza-Azul-Branco img,
+.Quadrado-da-meia-KitPreto img,
+.Quadrado-da-meia-kit-preto-branco-cinza img {
+
+    width: 390px;
+    height: 140px;
+    margin-top: 4vh;
+}
+
+/* CORES */
+
+.cores-preta-cinza,
+.cores-Vermelho-Laranja,
+.cores-branca-preta-cinzaMeias,
+.Kit-BrancoAzulEScuro-Chumbo-BrancoCInza,
+.cores-branca-preta-cinza-Kit,
+.cores-preto-branco-cinza-kit3pares
+.cores-Branca-AzulEscuro {
+    gap: 1vh;
+    display: flex;
+    margin-top: 0.75vh;
+    cursor: pointer;
+
+}
+
+.kit01CinzaAzulBranco, .coresPretoBrancaCinza {
+    font-family: 'WorkSans';
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #9DA1A0;
+}
+
+
+
+.Kit01 {
+    font-family: 'WorkSans';
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    border: 1px solid #9DA1A0;
+}
+
+.CorCinza, .CorCinzaMeia, .CorCinzaKit {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    background-color: #9DA1A0;
+}
+
+.CorPreta, .CorPretaMeia, .CorPretaKit {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    background-color: #000;
+}
+
+.Corbranca, .CorBrancaMeia, .CorBrancaKit {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    background-color: white;
+    border: 1px solid #A5A5A5;
+}
+
+.Vermelho {
+    background-color: #93201F;
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+}
+
+.Laranja {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    background-color: #D1671B;
+}
+
+.AzulMarinho {
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    background-color: #202755;
+}
 
 /* ---------------------------RODAPE ----------------------------------------------------------- */
 
@@ -629,5 +736,3 @@ a {
         /* Centraliza o conteúdo */
     }
 }
-
-
