--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -401,8 +401,12 @@ a {
 
 .selected {
     border: 2px solid #000000;
+    width: 5vh;
+    height: 5vh;
     border-radius: 50%;
+    overflow: hidden;
 }
+
 
 
 /* -------------------------------------CANO CURTO MASCULINA--------------------------------------------------------------- */
@@ -436,6 +440,7 @@ a {
 .Kit-BrancoAzulEScuro-Chumbo-BrancoCInza,
 .cores-branca-preta-cinza-Kit,
 .cores-preto-branco-cinza-kit3pares,
+.cores-Kit-Cinza-Azul-Branco,
 .cores-Branca-AzulEscuro {
     gap: 1vh;
     display: flex;
@@ -444,8 +449,8 @@ a {
 
 }
 
-.kit02, .kit03 {
-    font-family: 'WorkSans';
+
+.kit03, .Kit01, .kit02{ font-family: 'WorkSans';
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
@@ -453,22 +458,9 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #9DA1A0;
-}
+    border: 1px solid #9DA1A0;}
 
 
-
-.Kit01 {
-    font-family: 'WorkSans';
-    width: 5vh;
-    height: 5vh;
-    border-radius: 50%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    border: 1px solid #9DA1A0;
-}
 
 .CorCinza, .CorCinzaMeia, .CorCinzaKit {
     width: 5vh;
@@ -512,6 +504,13 @@ a {
     border-radius: 50%;
     background-color: #202755;
 }
+
+
+
+
+/* MOBILE */
+
+
 
 /* ---------------------------RODAPE ----------------------------------------------------------- */
 
@@ -739,4 +738,36 @@ a {
         justify-content: center;
         /* Centraliza o conteúdo */
     }
+}
+
+
+
+
+
+
+
+/* CANO CURTO */
+
+@media  screen and (max-width: 768px)  {
+    
+    
+.Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
+.Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
+.Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
+.Quadrado-da-meia-CanoCurto-Branca img{
+    width:  210px;
+    height: 180px;
+}
+
+
+#div-meia-cano-curto {
+    align-items: center;
+    width:290px;
+    margin-top: 10vh;
+   
+}
+.titulo{
+    margin-top: 5vh;
+    font-size: 3.45vh;
+}
 }
