--- a/baby.css
+++ b/baby.css
@@ -34,8 +34,8 @@ a {
 .cabecalhoUm {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 0 80px;
+    justify-content: center;
+    margin: 5px 80px;
     padding: 5px;
 }
 
@@ -52,9 +52,22 @@ a {
     width: 150px;
 }
 
+.imagemLogo {
+    flex: 1;
+}
+
 .linha {
+    width: 100%;
+    height: 1px;
     background-color: #fff;
-    height: 0.4px;
+    margin-bottom: 10px;
+}
+
+#header::after {
+    content: "";
+    display: block;
+    height: 20px;
+    background-color: #252160;
 }
 
 .cabecalho2 {
@@ -82,24 +95,19 @@ a {
     display: none;
     position: absolute;
     top: 100%;
-    /* Posiciona logo abaixo do item do menu */
     left: 50%;
-    /* Centraliza horizontalmente em relação ao item do menu */
     transform: translateX(-50%);
-    /* Ajusta a posição para centralizar */
-    width: 50vw;
-    /* Largura fixa para o submenu */
+    width: 20vw;
     background-color: #fff;
     border: 1px solid #2F2F2F;
     padding: 10px;
     z-index: 1;
     border-radius: 20px;
     box-sizing: border-box;
-    /* Garante que o padding seja incluído na largura total */
 }
 
 .submenuOrganizacao {
-    margin: 10px 80px;
+    margin: 10px 20px;
     text-align: left;
 }
 
@@ -135,6 +143,92 @@ a {
 
 .item:hover {
     border-bottom: 1px solid #fff;
+}
+
+.menu-icon {
+    display: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+.modal-menu {
+    position: fixed;
+    top: 0;
+    right: -100%; /* Posiciona o menu fora da tela à direita */
+    width: 100%;
+    height: 100%;
+    background-color: #252160;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 100;
+    transition: right 0.5s ease; /* Controla o tempo da animação */
+}
+
+.modal-menu .imagemLogo {
+    margin: 80px 0 30px 0;
+}
+
+.modal-menu .imagemLogo img {
+    width: 120px;/
+}
+
+.modal-menu nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding: 0 10%;
+}
+
+.menu-itemModal {
+    position: relative;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.itemModal {
+    color: white;
+    font: 600 20px 'WorkSans', sans-serif;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.itemModal:hover {
+    color: #c2c2c2;
+}
+
+.submenuModal {
+    display: none;
+    padding: 10px;
+    margin-left: 10px;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.submenuModal a {
+    color: rgb(0, 0, 0);
+    font: 400 16px 'WorkSans', sans-serif;
+    text-decoration: none;
+    display: block;
+    margin: 8px 0;
+}
+
+.submenuModal a:hover {
+    color: #5b5b5b;
+}
+
+.close-modal {
+    position: absolute;
+    top: 35px;
+    right: 35px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+    z-index: 101;
 }
 
 
@@ -849,9 +943,65 @@ a {
     font: 400 15px 'WorkSans', sans-serif;
 }
 
+
 /* VERSÃO MOBILE */
 
 @media screen and (max-width: 768px) {
+
+    /* CABEÇALHO */
+    .cabecalhoUm {
+        justify-content: space-between;
+        margin: 5px 20px;
+    }
+
+    .imagemLogo img {
+        width: 130px;
+    }
+
+    .imagemLogo {
+        flex: none;
+    }
+
+    .cabecalho2 {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .submenu {
+        display: none;
+    }
+
+    .menu-item.open .submenu {
+        display: block;
+    }
+
+    .menu-item:hover .submenu {
+        display: none;
+    }
+
+    #meiasBabyDesMasc {
+        padding-top: 15vh;
+        margin: 0 30px;
+    }
+
+    .modal-menu.show {
+        right: 0;
+    }
+
+
+
+
+    /* FIM DO CABEÇALHO */
+
+
+
+
+
+
+
     .container-rodape {
         padding: 50px 50px;
     }
